(docs): the instrument panel, in methodology
METHODOLOGY had four sentences on profiling. It now has the instrument panel, with
both languages named in every entry.

This started as a separate INSTRUMENTS document and that was wrong. The split was
supposed to be why against with what, and it does not hold: METHODOLOGY had an
Environment section about pinning and frequency while INSTRUMENTS had a Machine
section about core isolation and C-states. One topic, written twice in different
words, which the overlap check cannot see because the wording differs. Merged, with
one Environment section covering setup, verification and recording.

The environment section leads with the boot parameters, because they need a reboot
after the instance comes up and because deep C-state exit latency lands directly in
the tail. A benchmark that leaves idle states alone is measuring the power manager.
Every setting is verified after boot and recorded: a setting requested and silently
not taken is worse than one never requested, because the run looks controlled.

The Java instruction counting gap is closed, and the fix is better than what it
replaces. Callgrind cannot work usefully on a JVM, since the JIT is self-modifying
code and the counts would be dominated by compilation and collector threads. Hardware
counters read in process on the measured thread, through perf_event_open with the
counter page mapped, exclude all of that by construction, and instructions retired is
far more stable run to run than cycles. Both languages read their own counters around
the same region, so the asymmetry disappears and the simulators become a cross check
on the C++ side rather than its only deterministic instrument.

Two other things worth recording.

Flight Recorder's method profiler samples at safepoints, so a stretch of code with no
safepoint poll is invisible and its cost lands on whatever came next. async-profiler
samples on a signal and walks JIT frames. Flight Recorder is the event timeline and
as